# infoware

./: CMakeLists.txt
examples/: cpu.cpp
include/infoware/: cpu.hpp  system.hpp
src/cpu/frequency/: frequency_windows.cpp
src/gpu/memory/: OpenGL.cpp
src/system/OS_info/: os_info_windows.cpp
src/system/displays/: displays_windows.cpp
